# vibetensor

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  THIRD_PARTY_LICENSES.md  pyproject.toml
.github/workflows/: ci.yml  cuda-allocator-compute-sanitizer-nightly.yml  cuda-allocator-tsan-nightly.yml
examples/minigpt_reverse/: README.md  common.py  train_pytorch_reverse.py  train_vbt_reverse.py
examples/minigpt_shakespeare/: README.md  common.py  generate_vbt_shakespeare.py  train_pytorch_shakespeare.py  train_vbt_shakespeare.py  vbt_io.py
examples/mnist/: README.md  mnist_ops.md  train_pytorch.py  train_vbt.py  train_vbt_autograd.py
examples/mnist_nodejs/: README.md  mnist_idx.mjs  package-lock.json  package.json  train_mnist.mjs
examples/ring_allreduce_mlp/: README.md  benchmark_scaling.py  train_vbt_ring_allreduce_mlp.py
examples/transformer/: README.md  train_modular.py  train_vbt_transformer.py
examples/vit_cifar/: README.md  common.py  train_pytorch_vit_cifar.py  train_vbt_vit_cifar.py
include/: node_api.h
include/vbt/: hello.h
js/vibetensor/: package-lock.json  package.json  tsconfig.json
plugins/ext_square/: vbt_ext_square.c
plugins/reference/: vbt_reference_add.c  vbt_reference_add_cuda.cu  vbt_reference_ti_add.c
plugins/tests/: bad_abi.c  fabric_stream_check.c  fail_rollback.c  minor0_compat.c  missing_init.c  ok_null.c  p3_dup_def_a.c  p3_dup_def_b.c  p3_fail_init.c  p3_set_device_policy.c  (+3 more)
vibe_kernels/: .gitignore  BENCHMARKS.md  README.md  __init__.py  run_final_benchmarks.py
(+955 files in other folders)
